--- a/services/pom.xml
+++ b/services/pom.xml
@@ -11,12 +11,11 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <versions.tomee.embedded>1.7.3</versions.tomee.embedded>
-        <versions.openjpa>2.4.1</versions.openjpa>
-        <versions.myface>2.2.10</versions.myface>
-        <versions.javaee>6.0-6</versions.javaee>
-        <versions.openejb>4.7.4</versions.openejb>
-        <versions.tomee>1.7.3</versions.tomee>
+        <versions.javaee>7.0-1</versions.javaee>
+        <versions.openejb>7.0.2</versions.openejb>
+        <versions.tomee>7.0.2</versions.tomee>
+        <versions.maven.compiler>3.6.1</versions.maven.compiler>
+        <versions.java>1.8</versions.java>
     </properties>
 
     <repositories>
@@ -29,53 +28,24 @@
     </repositories>
 
     <dependencies>
-        <!-- Dependencies for the OpenEJB framework (provided at runtime by the app server) -->
         <dependency>
-            <groupId>org.apache.openejb</groupId>
+            <groupId>org.apache.tomee</groupId>
             <artifactId>javaee-api</artifactId>
             <version>${versions.javaee}</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>org.apache.openejb</groupId>
+            <groupId>org.apache.tomee</groupId>
             <artifactId>openejb-core</artifactId>
             <version>${versions.openejb}</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>org.apache.openejb</groupId>
+            <groupId>org.apache.tomee</groupId>
             <artifactId>tomee-embedded</artifactId>
             <version>${versions.tomee}</version>
             <scope>provided</scope>
         </dependency>
-        <!-- Dependencies for the testing frameworks (Junit, Mockito & Arquillian) (tests only) -->
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.12</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.jboss.arquillian.junit</groupId>
-            <artifactId>arquillian-junit-container</artifactId>
-            <version>1.1.5.Final</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.jboss.shrinkwrap.resolver</groupId>
-            <artifactId>shrinkwrap-resolver-depchain</artifactId>
-            <version>2.1.1</version>
-            <type>pom</type>
-            <scope>test</scope>
-        </dependency>
-        <!-- Application server: Tomee (tests only) -->
-        <dependency>
-            <groupId>org.apache.openejb</groupId>
-            <artifactId>arquillian-tomee-embedded</artifactId>
-            <version>${versions.tomee.embedded}</version>
-            <scope>test</scope>
-        </dependency>
-
     </dependencies>
 
     <build>
@@ -85,16 +55,16 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.1</version>
+                <version>${versions.maven.compiler}</version>
                 <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
+                    <source>${versions.java}</source>
+                    <target>${versions.java}</target>
                 </configuration>
             </plugin>
             <plugin>
-                <groupId>org.apache.openejb.maven</groupId>
+                <groupId>org.apache.tomee.maven</groupId>
                 <artifactId>tomee-maven-plugin</artifactId>
-                <version>${versions.tomee.embedded}</version>
+                <version>${versions.tomee}</version>
                 <configuration>
                     <!-- From TomEE to TomEE+ to support the web services stack -->
                     <tomeeClassifier>plus</tomeeClassifier>
